# ftx-cointegration-bot

./: Cargo.toml  CointPairs.txt  Cointegrated Pairs.txt  README.md  data.json  get_coint_pairs.py  last_update.json
src/: auth.rs  lib.rs  main.rs  python_script.rs  rest_api.rs  sign.rs  utils.rs  ws.rs
src/exchange/: mod.rs
src/exchange/ftx/: mod.rs  rest_api.rs  utils.rs  websocket.rs
src/exchange/ftx/rest_api/: objects.rs
src/modules/: calculations.rs  coint.rs  data_type.rs  mod.rs  rest_api.rs  utils.rs
src/strategy/: calculations.rs  coint.rs  data_type.rs  mod.rs  python_script.rs
