[package]
name = "rustws"
version = "0.1.0"
authors = ["simonrave"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.13.0"
url = "2.0.0"
native-tls = "0.2.7"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
serde = "*"
reqwest = "0.11.3"