[package]
name = "rustws"
version = "0.1.0"
authors = ["simonrave"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.13.0"
url = "2.0.0"
native-tls = "0.2.7"
serde_json = {version="1.0", features = ["preserve_order"]}
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.126", features = ["derive"]}
reqwest = {version = "0.11.2", features = ["json"]}
ring = ""
hmac = ""
sha2 = ""
hex = ""
#config file
confy = ""
lazy_static = "1.4.0"
csv = "1.1.6"