[package]
name = "rustws"
version = "0.1.0"
authors = ["saulane"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.13.0"
native-tls = "0.2.7"
serde_json = {version="1.0", features = ["preserve_order"]}
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.126", features = ["derive"]}
reqwest = {version = "0.11.2", features = ["json"]}
hmac = "0.11.0"
sha2 = "0.9.5"
hex = "0.4.3"
lazy_static = "1.4.0"
csv = "1.1.6"
chrono = "0.4.19"
ctrlc = "3.1.9"